<resources>
    <string name="app_name">RPN Calculator</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="_4t"> "  3":</string>
    <string name="_3t"> "  2:"</string>
    <string name="_2t"> "  1:"</string>
    <string name="_1t"> "  0:"</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="enter">ENTER</string>
    <string name="_0">0</string>
    <string name="sign">+/-</string>
    <string name="_2">2</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="multiply">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="div">/</string>
    <string name="pow">y^x</string>
    <string name="sqrt">√</string>
    <string name="undo">undo</string>
    <string name="drop">DROP</string>
    <string name="swap">SWAP</string>
    <string name="settings">SETTINGS</string>
    <string name="ac">AC</string>
    <string name="stack_color">Stack color:</string>
    <string name="background_color">Background color:</string>
    <string name="rounding_accuracy">Rounding accuracy:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="backspace">BS</string>
    <string name="stack">Stack: 0</string>
</resources>